| Bug #19044 | IM aborts on exit | ||
|---|---|---|---|
| Submitted: | 12 Apr 2006 13:01 | Modified: | 16 Jan 2007 21:53 |
| Reporter: | Alexander Nozdrin | ||
| Status: | Closed | ||
| Category: | Instance Manager | Severity: | S3 (Non-critical) |
| Version: | 5.0 | OS: | Microsoft Windows (Windows) |
| Assigned to: | Bugs System | Target Version: | |
[12 Apr 2006 13:01]
Alexander Nozdrin
[12 Apr 2006 15:52]
Miguel Solorzano
Thank you for the bug report.
[30 Nov 2006 12:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/16204 ChangeSet@1.2382, 2006-11-30 15:44:51+03:00, petr@outpost.site +1 -0 Fix Bug #19044 IM aborts on exit On windows IM aborted on assert once one stoppped it. The reason is that we didn't close the sockets on windows and therefore, the listener thread wasn't able to finish. This happened because we used close() call for it. While on windows one should use closesocket(). On other platfroms we have appropriate defines for closesocket(), so this is the function which should be used.
[4 Dec 2006 16:45]
Petr Chardin
pushed to 5.0-runtime and 5.1-runtime
[15 Jan 2007 17:03]
Marc Alff
Merged into 5.0.34 and 5.1.15
[16 Jan 2007 21:53]
Paul DuBois
Noted in 5.0.34, 5.1.15 changelogs. Instance Manager could crash during shutdown.
