server-tools/instance-manager/listener.cc
@@ -188,7 +188,7 @@ void Listener_thread::run()
           else
           {
             shutdown(client_fd, SHUT_RDWR);
-            close(client_fd);
+            closesocket(client_fd);
           }
         }
       }
@@ -200,7 +200,7 @@ void Listener_thread::run()
   log_info("Listener_thread::run(): shutdown requested, exiting...");
 
   for (i= 0; i < num_sockets; i++)
-    close(sockets[i]);
+    closesocket(sockets[i]);
 
 #ifndef __WIN__
   unlink(unix_socket_address.sun_path);
@@ -213,7 +213,7 @@ void Listener_thread::run()
 err:
   // we have to close the ip sockets in case of error
   for (i= 0; i < num_sockets; i++)
-    close(sockets[i]);
+    closesocket(sockets[i]);
 
   thread_registry.unregister_thread(&thread_info);
   thread_registry.request_shutdown();
@@ -260,7 +260,7 @@ int Listener_thread::create_tcp_socket()
   {
     log_error("Listener_thread::run(): bind(ip socket) failed, '%s'",
               strerror(errno));
-    close(ip_socket);
+    closesocket(ip_socket);
     return -1;
   }
 
@@ -268,7 +268,7 @@ int Listener_thread::create_tcp_socket()
   {
     log_error("Listener_thread::run(): listen(ip socket) failed, %s",
               strerror(errno));
-    close(ip_socket);
+    closesocket(ip_socket);
     return -1;
   }
 
